<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.otpverification.EnterAadhar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_send_24"
            android:layout_marginTop="90dp"
            android:id="@+id/topImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/OTPHeader"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/SendOTP"
            android:textSize="14sp"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/EnterAadhar"
            android:textSize="14sp"
            android:id="@+id/tempid"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/backbox"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:id="@+id/aadharNumber"
                android:hint="@string/AadharHint"
                android:maxLength="12"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/continueButton"
                android:text="Get OTP"
                android:layout_margin="30dp"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                />
        </FrameLayout>

    </LinearLayout>

</ScrollView>